[package]
name = "untitled1"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytemuck = { version = "1.14.0", features = ["derive", "min_const_generics"] }
bytemuck_derive = "1.5.0"
reqwest = "0.11.20"
serde = { version = "1.0.147", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = { version = "1.0.107", features = [] }
serde_with = "3.3.0"
sysinfo = "0.29.10"
tokio = { version = "1.32.0", features = ["full"] }
vector3 = "1.1.4"
winapi = { version = "0.3", features = ["d3d9types", "winuser", "ntdef", "basetsd", "handleapi", "errhandlingapi", "processthreadsapi", "memoryapi", "tlhelp32","psapi"] }
